# COBRA-py

./: CHANGELOG.md  COBRA-py_Implementation_Plan.md  COBRA-py_Summary_Design.md  README.md  dehb_state.json  history.parquet.gzip  incumbent.json  pyproject.toml
Archive/: README.md  convo.txt  quickstart.ipynb
checkpoints/dehb/: dehb_state.json  history.parquet.gzip  incumbent.json
cobra_py/: __init__.py  cli.py  helpers.py
cobra_py.egg-info/: PKG-INFO  entry_points.txt  requires.txt
cobra_py/backtest/: engine.py  metrics.py
cobra_py/data/: loader.py  preprocessor.py
cobra_py/indicators/: cache.py  registry.py
cobra_py/objective/: function.py
cobra_py/policy/: decoder.py  rules.py  schema.py  sl_tp.py
cobra_py/reporting/: report.py
cobra_py/search/: dehb_runner.py  nevergrad_runner.py  space.py  tpe_runner.py  types.py
cobra_py/validation/: walk_forward.py
configs/: default.yaml
docs/: Bugs -23.05.26.txt  COBRA-py_Implementation_Plan.md  COBRA-py_Summary_Design.md  README.md  quickstart.ipynb
examples/: README.md  dehb_state.json  history.parquet.gzip  incumbent.json  quick_api_run.py  spy_demo.py  spy_showcase.py
examples/smoke/: README.md  (+1 more)
rbdpo/: README.md  pyproject.toml  smoke_config.yaml  smoke_data.csv
results/: result.json  result.yaml
smoke_results/: result.json
tests/: conftest.py  test_backtest.py  test_cli.py  test_decoder.py  test_dehb_runner.py  test_helpers.py  test_indicators.py  test_loader.py  test_objective.py  test_reporting.py  test_rules.py  test_search_space.py  test_tpe_runner.py  test_walk_forward.py
(+215 files in other folders)
